control/jenkins/jenkins-ingress-rull-default.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: jenkins-ingress
spec:
  backend:
    serviceName: jenkins
    servicePort: 8080
