control/jenkins/jenkins-ingress-rull.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: jenkins-ingress
  namespace: jenkins
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:

  rules:
    - http:
        paths:
          - path: /jeknins
            backend:
              serviceName: jenkins
              servicePort: 8080
